--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ dependencies = [
     "ib-insync>=0.9.86",
     "pandas>=2.2.0",
     "numpy>=1.26.0",
+    "lxml>=5.0.0",
     "pyarrow>=14.0.0",
     "pydantic>=2.4.0",
+    "pydantic-settings>=2.0.3",
     "pytz>=2023.3",
     "python-dateutil>=2.8.2",
     "tenacity>=8.2.2",
