Switch daily data ingestion from Polygon to QuantConnect

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ IBKR_HOST=127.0.0.1
 IBKR_PORT=7497
 IBKR_CLIENT_ID=101
 
-# Data provider API keys (optional, fill as needed)
-POLYGON_API_KEY=
+# Data provider API credentials (optional, fill as needed)
+QUANTCONNECT_USER_ID=
+QUANTCONNECT_API_TOKEN=
 TIINGO_API_KEY=
 ALPHAVANTAGE_API_KEY=
