--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "ib-insync>=0.9.86",
     "pandas>=2.2.0",
     "numpy>=1.26.0",
+    "exchange-calendars>=4.5.4",
     "lxml>=5.0.0",
     "pyarrow>=14.0.0",
     "pydantic>=2.4.0",
@@ -22,7 +23,10 @@ dependencies = [
     "pytz>=2023.3",
     "python-dateutil>=2.8.2",
     "tenacity>=8.2.2",
-    "requests>=2.31.0"
+    "requests>=2.31.0",
+    "fastapi>=0.111.0",
+    "jinja2>=3.1.0",
+    "uvicorn[standard]>=0.29.0"
 ]
 
 [project.optional-dependencies]
@@ -32,7 +36,8 @@ dev = [
     "ruff>=0.1.6",
     "black>=24.4.0",
     "mypy>=1.6.1",
-    "pre-commit>=3.5.0"
+    "pre-commit>=3.5.0",
+    "httpx>=0.27.0"
 ]
 
 [tool.black]
